--- a/src/main/resources/templates/tickets/mis-tickets.html
+++ b/src/main/resources/templates/tickets/mis-tickets.html
@@ -177,7 +177,7 @@
             <div style="flex: 1 1 170px;">
                 <label for="tipoId">Tipo:</label>
                 <select id="tipoId" name="tipoId" class="search-input" style="width: 100%; padding: 8px;">
-                    <option value="">-- Seleccione --</option>
+                    <option value="">-- Seleccione Tipo--</option>
                     <option value="1">Reclamo</option>
                     <option value="2">Consulta</option>
                     <option value="3">Notificación</option>
