--- a/src/main/resources/templates/error/usuario-ya-existente.html
+++ b/src/main/resources/templates/error/usuario-ya-existente.html
@@ -83,7 +83,14 @@
         
         <p th:text="${mensaje}">Ha ocurrido un error inesperado.</p>
         
-        <button onclick="history.back()" class="btn-back">Volver al Formulario</button>
+        <div sec:authorize="hasRole('Admin')">
+            <a th:href="@{/}" class="btn-back">Volver al Formulario de Inscripción</a>
+        </div>
+       
+        
+        <div sec:authorize="!hasRole('Admin')">
+            <a th:href="@{${volverUrl}}" class="btn-back">Volver al Formulario de Inscripción</a>
+        </div>
 
     </div>
 </body>
