--- a/src/main/resources/templates/admin/agregar-usuario.html
+++ b/src/main/resources/templates/admin/agregar-usuario.html
@@ -7,7 +7,6 @@
     <title>Agregar Nuevo Usuario - Gestión de Usuarios</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <style>
-        /* Puedes mover estos estilos a tu styles.css para que sean globales */
         .full-width-button {
             display: block;
             width: 100%;
@@ -30,7 +29,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             width: 100%;
-            max-width: 600px; /* Ajustado para formularios más grandes */
+            max-width: 600px;
         }
 
         .login-header {
@@ -61,7 +60,7 @@
         }
 
         .form-group label {
-            flex: 0 0 120px; /* Ancho fijo para las etiquetas */
+            flex: 0 0 120px; 
             padding-right: 15px;
             text-align: right;
             color: #555;
@@ -113,8 +112,8 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 1em;
-            text-decoration: none; /* Para enlaces */
-            display: inline-block; /* Para que los enlaces se parezcan a botones */
+            text-decoration: none; 
+            display: inline-block; 
         }
 
         .btn-primary {
